# rms_prototype

./: Cargo.toml  index.html  rms_prototype-6521ed194e1ab9b958f2639e8f641885c31cdc052c028c17bbda2aa86f8045cdcef5e04527b9a6573f6831477fb86ed6.js  rms_prototype-6521ed194e1ab9b958f2639e8f641885c31cdc052c028c17bbda2aa86f8045cdcef5e04527b9a6573f6831477fb86ed6_bg.wasm
assets/: sw.js
src/: EZTable_creator.rs  app.rs  components.rs  database_layer.rs  lib.rs  main.rs  rms_error.rs  utilities.rs
src/screens/: admin_screen.rs  inventory_management_screen.rs  login_screen.rs  mod.rs  product_management_screen.rs  query_sender_screen.rs  sales_screen.rs  table_creator_screen.rs
