[package]
name = "rms_prototype"
version = "0.1.0"
authors = ["Hallgrímur Eggertsson <hallgrimurV@gmail.com>"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master" }

log = "0.4"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

# You only need serde if you want app persistence:
# serde = { version = "1", features = ["derive"] }
# smartstring = "1.0.1"
poll-promise = "0.3.0"
EZDB = { git = "https://github.com/lord-hellgrim/EZDB.git", branch = "master" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
